# second-brain

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.MD  CLAUDE.md  Dockerfile  README.md  config.toml  docker-compose.yml  pyproject.toml
api/: config.py  logging_config.py  main.py  requirements.txt
api/services/: agentic.py  audio_listener.py  audio_queue.py  audio_worker.py  brain_manager.py  life_log.py  llm.py  notes.py  transcriber.py  vad_segmenter.py
audio_bridge/: .env.example  README.md  main.py
audio_capture/: .env.example  README.md  main.py  requirements.txt
backend/: README.md  anthropic.yaml  config.yaml  example.yaml  gemini.yaml  local.yaml  openai.yaml  pyproject.toml
backend/exocort/: __init__.py  logs.py  provider.py
collector/: .env.example  README.md  event_store.py  main.py  openai_transcribe.py  requirements.txt  transcribe.py  util.py
config/: config.gemini.json  config.json.example  config.local.json  config.mac.json  config.openai.json  openai.json
config/examples/: llm.anthropic.json  llm.gemini-openai.json  (+6 more)
docs/: data-flow.md  processor-pipeline.md
exocort/: README.md  __init__.py  config.example.toml  config.py  example.toml  example.yaml  mistral.yaml  pyproject.toml  runner.py  settings.py
exocort/capture/: __init__.py  audio.py  screen.py
exocort/capture/audio/: __init__.py  __main__.py  agent.py  device.py  mac_audio_helper  models.py  run.py  uploader.py  vad.py
exocort/capture/screen/: __init__.py  __main__.py  app.py  capture.py  models.py  run.py
exocort/capturer/audio/: __init__.py  capture.py  config.py  device.py  uploader.py  vad.py
exocort/capturer/screen/: capture.py  config.py
exocort/collector/: __init__.py  app.py  config.py  dedup.py  forward.py  vault.py
exocort/collector/formats/: __init__.py  base.py  default.py  gemini.py  openai.py
exocort/engine/: __init__.py  base.py  config.py  http.py  runtime.py  steps.py  unified_config.py
exocort/engine/adapters/: __init__.py  anthropic.py  base.py  custom.py  openai.py
exocort/exocort/: runner.py  vault.py
exocort/exocort/bridge/: router.py
exocort/exocort/bridge/providers/: anthropic.py  common.py  gemini.py  mistral.py
exocort/exocort/capturer/audio/capture/: __init__.py  models.py  service.py
exocort/exocort/capturer/audio/vad/: __init__.py  models.py
exocort/exocort/capturer/screen/: __init__.py  capture.py
exocort/exocort/config/: __init__.py  loader.py  models.py
exocort/exocort/processor/: __init__.py  retention.py  service.py
exocort/exocort/processor/asr/: models.py
exocort/exocort/processor/notes/: agent.py  batching.py  models.py  service.py  timeline.py  tools.py  vault.py
exocort/exocort/processor/ocr/: models.py
exocort/processor/: __init__.py  __main__.py  adapters.py  artifacts.py  cli.py  config.py  content.py  engine.py  llm.py  models.py  pipeline.py  service.py  storage.py
exocort/processor/agents/: __init__.py  orchestrator.py  worker.py
exocort/processor/domain/: models.py
exocort/processor/storage/: paths.py  state_db.py
exocort/processor/vault/: __init__.py  render.py
extension/: README.md  background.js  content.js  manifest.json  offscreen.html  offscreen.js  page_audio_monitor.js  popup.css  popup.html  popup.js
frame_capture/: .env.example  README.md  capture.py  collector_client.py  formatter.py  main.py  ocr.py  requirements.txt
instructions/: architecture_principles.md  coding_principles.md  notes_knowledge_principles.md  service_principles.md
processor/: .env.example  README.md  requirements.txt  run.py
services/common/: pyproject.toml
services/common/src/common/models/: __init__.py  asr.py  chat.py  health.py  ocr.py
services/common/src/common/utils/: __init__.py  logs.py  ports.py  yaml.py
services/faster_whisper/: .env.example  README.md  app.py  config.py  example.yaml  pyproject.toml
services/faster_whisper/app/: main.py
services/faster_whisper/app/api/v1/endpoints/: health.py  transcriptions.py
services/faster_whisper/src/: __init__.py  config.py  transcription.py
services/faster_whisper/src/config/: __init__.py  settings.py
services/faster_whisper/tests/: test_app_unit.py  test_config.py
services/llama_cpp/: .env.example  README.md  example.yaml  pyproject.toml
services/llama_cpp/app/: main.py
services/llama_cpp/app/api/v1/: api.py
services/llama_cpp/app/api/v1/endpoints/: chat.py  health.py  models.py
services/llama_cpp/src/: app.py  chat.py  config.py
services/llama_cpp/src/chat/: __init__.py  models.py  service.py
services/llama_cpp/src/config/: __init__.py  models.py  settings.py
services/mac_asr/: .env.example  README.md  example.yaml  pyproject.toml
services/mac_asr/app/: main.py
services/mac_asr/app/api/v1/: api.py
services/mac_asr/app/api/v1/endpoints/: health.py  transcriptions.py
services/mac_asr/src/: app.py  asr.py  config.py  lang_detect.py  transcription.py
services/mac_asr/src/asr/: __init__.py  errors.py  locale.py  models.py  permissions.py  transcription.py
services/mac_asr/src/config/: __init__.py  models.py  settings.py
services/mac_asr/src/health/: __init__.py  models.py
services/mac_asr/tests/: test_app_unit.py  test_lang_detect_unit.py
services/mac_ocr/: .env.example  README.md  example.yaml  pyproject.toml
services/mac_ocr/app/: main.py
services/mac_ocr/app/api/v1/: api.py
services/mac_ocr/app/api/v1/endpoints/: health.py  ocr.py
services/mac_ocr/src/: app.py  config.py  document.py  ocr.py
services/mac_ocr/src/config/: __init__.py  models.py  settings.py
services/mac_ocr/src/document/: models.py  resolver.py
services/mac_ocr/src/health/: __init__.py  models.py
services/mac_ocr/src/ocr/: __init__.py  models.py  service.py  vision.py
services/mac_ocr/tests/: test_ocr.py  test_worker.py
tests/: test_audio.py  test_audio_device.py  test_audio_processing.py  test_audio_system_capture.py  test_audio_vad.py  test_collector_config.py  test_forward.py  test_llama_cpp_service.py  test_processor_config.py  test_processor_pipeline.py  test_runner.py  test_settings.py  test_vault.py
(+86 files in other folders)
