[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exocort"
version = "0.1.0"
description = "Exocort collector, capture agents, and processor"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "python-dotenv",
  "requests",
  "fastapi",
  "python-multipart",
  "uvicorn[standard]",
  "sounddevice",
  "webrtcvad-wheels",
  "mss",
]

[project.optional-dependencies]
collector = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
]
audio = [
  "sounddevice",
  "webrtcvad-wheels",
]
screen = [
  "mss",
  "pywinctl",
]
processor = [
]
test = [
  "pytest",
  "pytest-cov",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
]

[tool.uv]
managed = true
default-groups = ["dev"]

[project.scripts]
exocort = "exocort.runner:main"
exocort-collector = "exocort.collector.app:main"
exocort-audio = "exocort.capture.audio:main"
exocort-screen = "exocort.capture.screen:main"
exocort-processor = "exocort.processor.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["exocort", "."]
testpaths = ["tests", "services"]
markers = [
  "unit: fast unit tests",
  "integration: internal integration tests",
  "service: service-level tests",
  "slow: slower tests",
  "llm: llm-focused tests",
  "ocr: ocr-focused tests",
  "stt: stt-focused tests",
]
addopts = "-ra"
