[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exocort"
version = "0.1.0"
description = "Audio and screen capture utilities"
requires-python = ">=3.11,<3.13"
dependencies = [
  "sounddevice",
  "mss",
]

[tool.setuptools.packages.find]
where = ["."]
