[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exocort"
version = "0.1.0"
description = "Audio and screen capture utilities"
requires-python = ">=3.11,<3.13"
dependencies = [
  "sounddevice",
  "mss",
  "numpy",
  "litellm==1.83.4",
]

[project.scripts]
exocort = "exocort.runner:main"

[tool.setuptools.packages.find]
where = ["."]
