[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exocort-llama-cpp-service"
version = "0.1.0"
description = "Standalone llama.cpp OpenAI-compatible chat completion API"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "huggingface_hub",
  "llama-cpp-python",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
llama-cpp-service = "src.app:main"

[tool.setuptools]
packages = ["src"]
