[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "exocort-llama-cpp-service"
version = "0.1.0"
description = "Standalone llama.cpp OpenAI-compatible chat completion API"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.135.1",
  "exocort-services-common",
  "uvicorn[standard]==0.42.0",
  "huggingface_hub==1.7.1",
  "llama-cpp-python @ git+https://github.com/JamePeng/llama-cpp-python.git@35957bd7aa7d21f77a07d838f1308bffa33573ff",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = ["pytest==9.0.2"]

[project.scripts]
llama-cpp-service = "app.main:main"

[tool.uv.sources]
exocort-services-common = { path = "../common", editable = true }

[tool.setuptools.packages.find]
include = ["app*", "src*"]
