[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exocort-mac-asr-service"
version = "0.1.0"
description = "macOS speech-to-text API: one endpoint that transcribes uploaded audio"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "python-multipart",
  "uvicorn[standard]",
  "pyobjc-core",
  "pyobjc-framework-Cocoa",
  "pyobjc-framework-Speech",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
mac-asr-service = "src.app:main"

[tool.setuptools]
packages = ["src"]
