[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exocort-mac-ocr-service"
version = "0.1.0"
description = "Standalone macOS Vision OCR API for uploaded image files"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "python-multipart",
  "uvicorn[standard]",
  "pyobjc-framework-ApplicationServices",
  "pyobjc-framework-Cocoa",
  "pyobjc-framework-Quartz",
  "pyobjc-framework-Vision",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
mac-ocr-service = "src.app:main"

[tool.setuptools]
packages = ["src"]
