[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "exocort-mac-ocr-service"
version = "0.1.0"
description = "Standalone macOS Vision OCR API for uploaded image files"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.135.1",
  "python-multipart==0.0.22",
  "python-dotenv==1.2.2",
  "uvicorn[standard]==0.41.0",
  "pyobjc-core==12.1",
  "pyobjc-framework-ApplicationServices==12.1",
  "pyobjc-framework-Cocoa==12.1",
  "pyobjc-framework-Quartz==12.1",
  "pyobjc-framework-Vision==12.1",
]

[project.optional-dependencies]
dev = ["pytest==9.0.2"]

[project.scripts]
mac-ocr-service = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*", "src*"]
